Logos section complete

--- a/src/components/SectionOne.module.css
+++ b/src/components/SectionOne.module.css
@@ -10,6 +10,10 @@
 .items {
   flex-basis: 50%;
 }
+.item2 {
+  display: flex;
+  justify-content: center;
+}
 .innerModal {
   position: relative;
   width: 52.5rem;
@@ -53,9 +57,31 @@
   margin-right: 0.5rem;
   font-size: 1.6rem;
 }
+
 .clip {
-  width: 77.6rem;
+  display: flex;
+  align-items: center;
+
+  width: 50.6rem;
   height: 45.8rem;
   background-color: rebeccapurple;
-  clip-path: polygon(30% 0, 100% 0%, 70% 100%, 0% 100%);
+  transform: skew(-25deg);
+  /* clip-path: polygon(30% 0, 100% 0%, 70% 100%, 0% 100%); */
+}
+.smallButton {
+  cursor: pointer;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 4;
+  transform: skew(25deg) translateX(-3.2rem);
+
+  width: 6.4rem;
+  height: 6.4rem;
+  background-color: #ffffff;
+  border-radius: 50%;
+}
+.smallButton:last-of-type {
+  margin-left: auto;
+  transform: skew(25deg) translateX(3.2rem);
 }
