--- a/src/components/Test.module.css
+++ b/src/components/Test.module.css
@@ -32,8 +32,8 @@
 .par {
   letter-spacing: 1px;
   font-weight: 300;
-  color: #919399;
-  font-size: 1.6rem;
+  color: #64666b;
+  font-size: 1.8rem;
 }
 .button {
   cursor: pointer;
